# Fake_News_Detector

./: README.md  check_data.py  config.py  main.py  pyproject.toml
notebooks/: fake_news_detectyion.ipynb
src/: __init__.py  evaluation.py  feature_extraction.py  model.py  preprocessing.py
