[project]
name = "fake-news-detection-ver1"
version = "0.1.1"
description = "fake news detecioon by PassiveAggressiveClassifier and with TfidfVectorizer"
authors = [
    {name = "Maksim"}
]
license = {text = "none"}
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "tensorflow (>=2.20.0,<3.0.0)",
    "tensorflow-datasets (>=4.9.9,<5.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "colorlog (>=6.10.1,<7.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
